<?xml version="1.0"?>
<package format="2">
  <name>ur_ee_server</name>
  <version>0.0.0</version>
  <description>The ur_ee_server package</description>

  <maintainer email="sirius@todo.todo">zhr</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>jrc_srvs</build_depend>
    <build_depend>ur_msgs</build_depend>
  

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>jrc_srvs</exec_depend>
    <exec_depend>ur_msgs</exec_depend>

  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
